agenda, lit and practicals added

--- a/_layouts/courseAbout.html
+++ b/_layouts/courseAbout.html
@@ -8,14 +8,14 @@ itemtype: http://schema.org/WebPage
 <div class="row">
   <div class="sidebar span4">
     <ul class="nav nav-list">
-      <li> <a href="/basics.html">Msim basics</a></li>
-      <li> <a href="/literature">Literature</a></li>
-      <li> <a href="/practicals">Practicals</a></li>
-      <li> <a href="/code">Code</a></li>
-      <li> <a href="/data">Data</a></li>
-      <li> <a href="/further">Further study</a></li>
+      <li> <a href="{{site.baseurl}}/agenda.html">Agenda</a></li>
+      <li> <a href="{{site.baseurl}}/literature.html">Literature</a></li>
+      <li> <a href="{{site.baseurl}}/practicals.html">Practicals</a></li>
+      <li> <a href="{{site.baseurl}}/code.html">Code</a></li>
+      <li> <a href="{{site.baseurl}}/data.html">Data</a></li>
+      <li> <a href="{{site.baseurl}}/further.html">Further study</a></li>
     </ul>
-    <img src="/img/msim-schema.png">
+    <img src="{{site.baseurl}}/img/msim-schema.png">
   </div>
   </div>
   </div>
