--- a/_layouts/courseAbout.html
+++ b/_layouts/courseAbout.html
@@ -26,9 +26,21 @@ itemtype: http://schema.org/WebPage
  
     <h2>Organizers</h2>
     <ul class="thumbnails">
-    {% for user in site.data.course.organizers %}
-      <li class="span2"><a href="{{ user.url }}"><img class="usr-image thumbnail" src="{{ user.image }}" alt="{{ user.name }}"></a></li>
-    {% endfor %}
+    
+        <li class="span2"><a href="https://robinlovelace.net"><img class="usr-image thumbnail" src="http://www.geog.leeds.ac.uk/fileadmin/images/geopeople/r.lovelace.jpg" alt="Robin Lovelace"></a>
+        
+        Robin Lovelace is the course leader as part of his role as a TALISMAN
+        Research Fellow researcher at the University of Leeds. Robin learned
+        spatial microsimulation and R during his PhD on the energy costs of commuting and 
+        has developed new methods in spatial microsimulation and applied them
+        to real-world transport problems.</li>
+    
+        <li class="span2"><a href="http://www.philmikejones.net/"><img class="usr-image thumbnail" src="https://pbs.twimg.com/profile_images/2202787593/phil-jones.jpg" alt="Phil Mike Jones"></a>
+        Phil Mike Jones was conscripted to demonstrate on the course and has ended up
+        helping out with its planning. A PhD student at the University of Sheffield, he is
+        implementing spatial microsimulation methods for health care applications.
+        Phil is also an experienced user of R for statistic analysis and processing.</li>
+    
     </ul>
   </div>
 </div>
