--- a/_layouts/courseAbout.html
+++ b/_layouts/courseAbout.html
@@ -4,7 +4,7 @@ itemtype: http://schema.org/WebPage
 ---
 <div class="row">
   <div class="sidebar span4">
- 
+
 <div class="row">
   <div class="sidebar span4">
     <ul class="nav nav-list">
@@ -23,24 +23,20 @@ itemtype: http://schema.org/WebPage
   <div class="content span8">
     <h2>About</h2>
     {{ content }}
- 
+
     <h2>Organizers</h2>
     <ul class="thumbnails">
-    
+
         <li class="span2"><a href="https://robinlovelace.net"><img class="usr-image thumbnail" src="http://www.geog.leeds.ac.uk/fileadmin/images/geopeople/r.lovelace.jpg" alt="Robin Lovelace"></a>
-        
-        Robin Lovelace is the course leader as part of his role as a TALISMAN
-        Research Fellow researcher at the University of Leeds. Robin learned
-        spatial microsimulation and R during his PhD on the energy costs of commuting and 
-        has developed new methods in spatial microsimulation and applied them
-        to real-world transport problems.</li>
-    
+
+Robin Lovelace is the course leader as part of his role as Research Fellow in the Consumer Data Research Centre at the University of Leeds. Robin learned spatial microsimulation and R during his PhD on the energy costs of commuting and has developed new methods in spatial microsimulation and applied them to real-world transport problems.</li>
+
         <li class="span2"><a href="http://www.philmikejones.net/"><img class="usr-image thumbnail" src="https://pbs.twimg.com/profile_images/2202787593/phil-jones.jpg" alt="Phil Mike Jones"></a>
         Phil Mike Jones was conscripted to demonstrate on the course and has ended up
         helping out with its planning. A PhD student at the University of Sheffield, he is
         implementing spatial microsimulation methods for health care applications.
         Phil is also an experienced user of R for statistic analysis and processing.</li>
-    
+
     </ul>
   </div>
 </div>
